Password Manager 21.4.0
* Record deletion replaced with deactivation
* Import updated to handle delete/restore